feat: rm NextCard from LikeResponse and rm DislikeResponse
