# internal/web/olikes/api.gen.go
@@ -14,9 +14,6 @@ import (
 	strictecho "github.com/oapi-codegen/runtime/strictmiddleware/echo"
 )
 
-// DislikeResponse Response body for creating a dislike and next card.
-type DislikeResponse = dto.DislikeResponse
-
 // Error defines model for Error.
 type Error struct {
 	Code    int    `json:"code"`
@@ -29,10 +26,10 @@ type FreelancerDTO = dto.FreelancerDTO
 // LikeDTO Data Transfer Object representing a like.
 type LikeDTO = dto.LikeDTO
 
-// LikeDislikeRequest Request body for creating a like or dislike.
-type LikeDislikeRequest = dto.LikeDislikeRequest
+// LikeRequest Request body for creating a like.
+type LikeRequest = dto.LikeRequest
 
-// LikeResponse Response body for creating a like and next card.
+// LikeResponse Response body for creating a like and get Match.
 type LikeResponse = dto.LikeResponse
 
 // MatchDTO Data Transfer Object representing a match between freelancer and project
@@ -50,17 +47,11 @@ type SkillDTO = dto.SkillDTO
 // UserDTO Data Transfer Object representing a user.
 type UserDTO = dto.UserDTO
 
-// PostLikesDislikeJSONRequestBody defines body for PostLikesDislike for application/json ContentType.
-type PostLikesDislikeJSONRequestBody = LikeDislikeRequest
-
 // PostLikesLikeJSONRequestBody defines body for PostLikesLike for application/json ContentType.
-type PostLikesLikeJSONRequestBody = LikeDislikeRequest
+type PostLikesLikeJSONRequestBody = LikeRequest
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
-	// Dislike a freelancer or project
-	// (POST /likes/dislike)
-	PostLikesDislike(ctx echo.Context) error
 	// Get next feed card for current user
 	// (GET /likes/feed)
 	GetLikesFeed(ctx echo.Context) error
@@ -72,15 +63,6 @@ type ServerInterface interface {
 // ServerInterfaceWrapper converts echo contexts to parameters.
 type ServerInterfaceWrapper struct {
 	Handler ServerInterface
-}
-
-// PostLikesDislike converts echo context to params.
-func (w *ServerInterfaceWrapper) PostLikesDislike(ctx echo.Context) error {
-	var err error
-
-	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.PostLikesDislike(ctx)
-	return err
 }
 
 // GetLikesFeed converts echo context to params.
@@ -129,63 +111,9 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 		Handler: si,
 	}
 
-	router.POST(baseURL+"/likes/dislike", wrapper.PostLikesDislike)
 	router.GET(baseURL+"/likes/feed", wrapper.GetLikesFeed)
 	router.POST(baseURL+"/likes/like", wrapper.PostLikesLike)
 
-}
-
-type PostLikesDislikeRequestObject struct {
-	Body *PostLikesDislikeJSONRequestBody
-}
-
-type PostLikesDislikeResponseObject interface {
-	VisitPostLikesDislikeResponse(w http.ResponseWriter) error
-}
-
-type PostLikesDislike200JSONResponse DislikeResponse
-
-func (response PostLikesDislike200JSONResponse) VisitPostLikesDislikeResponse(w http.ResponseWriter) error {
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(200)
-
-	return json.NewEncoder(w).Encode(response)
-}
-
-type PostLikesDislike400JSONResponse Error
-
-func (response PostLikesDislike400JSONResponse) VisitPostLikesDislikeResponse(w http.ResponseWriter) error {
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(400)
-
-	return json.NewEncoder(w).Encode(response)
-}
-
-type PostLikesDislike401JSONResponse Error
-
-func (response PostLikesDislike401JSONResponse) VisitPostLikesDislikeResponse(w http.ResponseWriter) error {
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(401)
-
-	return json.NewEncoder(w).Encode(response)
-}
-
-type PostLikesDislike404JSONResponse Error
-
-func (response PostLikesDislike404JSONResponse) VisitPostLikesDislikeResponse(w http.ResponseWriter) error {
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(404)
-
-	return json.NewEncoder(w).Encode(response)
-}
-
-type PostLikesDislike500JSONResponse Error
-
-func (response PostLikesDislike500JSONResponse) VisitPostLikesDislikeResponse(w http.ResponseWriter) error {
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(500)
-
-	return json.NewEncoder(w).Encode(response)
 }
 
 type GetLikesFeedRequestObject struct {
@@ -295,9 +223,6 @@ func (response PostLikesLike500JSONResponse) VisitPostLikesLikeResponse(w http.R
 
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
-	// Dislike a freelancer or project
-	// (POST /likes/dislike)
-	PostLikesDislike(ctx context.Context, request PostLikesDislikeRequestObject) (PostLikesDislikeResponseObject, error)
 	// Get next feed card for current user
 	// (GET /likes/feed)
 	GetLikesFeed(ctx context.Context, request GetLikesFeedRequestObject) (GetLikesFeedResponseObject, error)
@@ -316,35 +241,6 @@ func NewStrictHandler(ssi StrictServerInterface, middlewares []StrictMiddlewareF
 type strictHandler struct {
 	ssi         StrictServerInterface
 	middlewares []StrictMiddlewareFunc
-}
-
-// PostLikesDislike operation middleware
-func (sh *strictHandler) PostLikesDislike(ctx echo.Context) error {
-	var request PostLikesDislikeRequestObject
-
-	var body PostLikesDislikeJSONRequestBody
-	if err := ctx.Bind(&body); err != nil {
-		return err
-	}
-	request.Body = &body
-
-	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
-		return sh.ssi.PostLikesDislike(ctx.Request().Context(), request.(PostLikesDislikeRequestObject))
-	}
-	for _, middleware := range sh.middlewares {
-		handler = middleware(handler, "PostLikesDislike")
-	}
-
-	response, err := handler(ctx, request)
-
-	if err != nil {
-		return err
-	} else if validResponse, ok := response.(PostLikesDislikeResponseObject); ok {
-		return validResponse.VisitPostLikesDislikeResponse(ctx.Response())
-	} else if response != nil {
-		return fmt.Errorf("unexpected response type: %T", response)
-	}
-	return nil
 }
 
 // GetLikesFeed operation middleware
